RESOLVED FIXED317182
[AppKit Gestures] REGRESSION(313984@main): Long press over non-editable text does not produce word selection
https://bugs.webkit.org/show_bug.cgi?id=317182
Summary [AppKit Gestures] REGRESSION(313984@main): Long press over non-editable text ...
Richard Robinson
Reported 2026-06-15 19:46:46 PDT
.
Attachments
Richard Robinson
Comment 1 2026-06-15 19:46:47 PDT
Richard Robinson
Comment 2 2026-06-15 19:49:27 PDT
EWS
Comment 3 2026-06-15 21:45:38 PDT
Committed 315270@main (9e74eac7aaeb): <https://commits.webkit.org/315270@main> Reviewed commits have been landed. Closing PR #67231 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.